# cowork_bench

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cowork_bench  docker-compose.yml  main.py  main_strands.py  pyproject.toml  run_parallel.sh
configs/mcp_servers/: arxiv-latex-mcp.yaml  arxiv_local.yaml  canvas.yaml  clickhouse.yaml  emails.yaml  excel.yaml  filesystem.yaml  forms.yaml  google_calendar.yaml  google_sheet.yaml  hr1c.yaml  insales.yaml  kulinar.yaml  memory.yaml  moex-finance.yaml  npx-fetch.yaml  pdf-tools.yaml  playwright_with_chunk.yaml  pptx.yaml  rzd.yaml  scholarly_search.yaml  teamly.yaml  terminal.yaml  woocommerce.yaml  word.yaml  yahoo-finance.yaml  youtube.yaml  youtube_transcript.yaml
docs/: ENVIRONMENT_QUIRKS.md  RUSSIFICATION.md  STRANDS.md
explorer/: index.html  server.py
local_servers/forms-mcp/: README.md  package-lock.json  (+1 more)
local_servers/hr1c-mcp-server/: pyproject.toml
local_servers/hr1c-mcp-server/src/hr1c_mcp_server/: __init__.py  db_client.py  server.py
scripts/: canvas_gen_seed_sql.py  canvas_patch_groundtruth.py  canvas_relabel_map.py  clickhouse_gen_seed_sql.py  clickhouse_relabel_map.py  eval_config_strands.json  generate_tasks_review.py  moex_ext_gen.py  print_tasks_list.py  ru_record.py  run.sh  run_containerized.sh  run_eval.py  scaffold_ru_task.py  stop_parallel.sh  test_containerized.sh  test_db_migration.sh  test_mcp_servers.py  wc_gen_seed_sql.py  wc_patch_groundtruth.py  wc_relabel_map.py  wc_reviews_src.json
strands_runner/: __init__.py  agent.py  local_tools.py  mcp_clients.py  model.py
(+2819 files in other folders)
